# audiopipe

./: .gitignore  README.md  brainstorm.md  pyproject.toml
.github/workflows/: test.yml
config/: pipeline.yaml
config/presets/: blown.yaml  clean.yaml  oldtape.yaml  tape.yaml  underwater.yaml
src/audiopipe/: analyze.py  cli.py  degrade.py  dsp.py  io.py  mapping.py  mix.py  ott.py  pipeline.py  queue.py  runner.py  score.py  segment.py  segmenter.py  sequencer.py  sidecar.py  splice.py  tape.py  tape_loop.py  warp.py
src/audiopipe/stages/: base.py  passthrough.py
src/audiopipe/storage/: base.py  local.py
tests/: conftest.py  test_m1.py  test_m2.py  test_m3.py  test_m4.py  test_ott.py  test_score.py  test_warp.py
