[project]
name = "audiopipe"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = ["soundfile", "numpy", "pyyaml"]

[project.optional-dependencies]
analysis = ["librosa", "scipy"]
fx = ["pedalboard"]

[project.scripts]
audiopipe = "audiopipe.cli:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
